# RNNSistem

./: .cache.sqlite  .gitignore  Dockerfile  README.md  data-file.bin.dvc  data.dvc  docker-compose.yml  generatingCommand.txt  pyproject.toml  reference_data.csv  testdata.json
.dvc/: config
.github/workflows/: build_deploy_api.yml  build_deploy_client.yml  build_deploy_norhflank.yml  evaluate_predictions.yml  fetch_data.yml  main.yml  python-app.yml  test_data.yml  train_model.yml  validate-test.yml
data/processed/: DVORANA TABOR.csv  EUROPARK - POBREŠKA C..csv  GORKEGA UL. - OŠ FRANCETA PREŠERNA.csv  GOSPOSVETSKA C. - III. GIMNAZIJA.csv  GOSPOSVETSKA C. - TURNERJEVA UL..csv  GOSPOSVETSKA C. - VRBANSKA C..csv  JHMB – DVOETAŽNI MOST.csv  KOROŠKA C. - KOROŠKI VETER.csv  LIDL - KOROŠKA C..csv  LIDL - TITOVA C..csv  LJUBLJANSKA UL. - FOCHEVA.csv  LJUBLJANSKA UL. - II. GIMNAZIJA.csv  MLADINSKA UL. - TRUBARJEVA UL..csv  MLINSKA UL . - AVTOBUSNA POSTAJA.csv  NA POLJANAH - HEROJA ŠERCERJA.csv  NICEHASH - C. PROLETARSKIH BRIGAD.csv  NKBM - TRG LEONA ŠTUKLJA.csv  PARTIZANSKA C. - CANKARJEVA UL..csv  PARTIZANSKA C. - TIC.csv  PARTIZANSKA C. - ŽELEZNIŠKA POSTAJA.csv  PETROL – LENT – VODNI STOLP.csv  POŠTA - SLOMŠKOV TRG.csv  RAZLAGOVA UL. - OBČINA.csv  SPAR - TRŽNICA TABOR.csv  STROSSMAYERJEVA UL. - TRŽNICA.csv  TELEMACH - GLAVNI TRG - STARI PERON.csv  ULICA MOŠE PIJADA - UKC.csv  UM FGPA - LENT - SODNI STOLP.csv  VZAJEMNA, VARUH ZDRAVJA - BETNAVSKA C..csv  station_1.csv  station_10.csv  station_11.csv  station_12.csv  station_13.csv  station_14.csv  station_15.csv  station_16.csv  station_17.csv  station_18.csv  station_19.csv  (+18 more)
data/raw/: bike_data_20240312_121351.json  bike_data_20240312_121733.json  mbajk_dataset.csv
gx/: great_expectations.yml  text.ipynb  validate_data.py
gx/checkpoints/: station_1_checkpoint.yml
gx/expectations/: .ge_store_backend_id  station_1_suite.json
mlruns/0/: meta.yaml
models/: lstm_model_final.h5
models/default/: model.h5
models/scalers/: other_scaler.joblib  stands_scaler.joblib
models/station_1/: model.h5  other_scaler.joblib  stands_scaler.joblib
models/station_10/: model.h5  other_scaler.joblib
models/station_11/: model.h5
models/station_12/: model.h5  other_scaler.joblib
models/station_13/: model.h5  other_scaler.joblib
models/station_14/: model.h5  other_scaler.joblib  stands_scaler.joblib
models/station_15/: model.h5  other_scaler.joblib
models/station_16/: model.h5  other_scaler.joblib  stands_scaler.joblib
models/station_17/: model.h5  other_scaler.joblib
models/station_18/: model.h5  other_scaler.joblib
models/station_19/: model.h5  other_scaler.joblib  stands_scaler.joblib
models/station_2/: model.h5  other_scaler.joblib
models/station_20/: model.h5  other_scaler.joblib  stands_scaler.joblib
models/station_21/: model.h5  other_scaler.joblib  stands_scaler.joblib
models/station_22/: model.h5  other_scaler.joblib  stands_scaler.joblib
models/station_23/: model.h5  other_scaler.joblib  stands_scaler.joblib
models/station_24/: model.h5  other_scaler.joblib
models/station_25/: model.h5
models/station_26/: model.h5  other_scaler.joblib
models/station_27/: model.h5  other_scaler.joblib  stands_scaler.joblib
models/station_28/: model.h5  other_scaler.joblib  stands_scaler.joblib
models/station_29/: model.h5  other_scaler.joblib
models/station_3/: model.h5  other_scaler.joblib
models/station_4/: model.h5  other_scaler.joblib
models/station_5/: model.h5  other_scaler.joblib  stands_scaler.joblib
models/station_6/: model.h5
models/station_7/: model.h5  other_scaler.joblib
models/station_8/: model.h5  other_scaler.joblib
models/station_9/: model.h5  other_scaler.joblib
notebooks/: fetch_data.ipynb  mbike.ipynb  model.ipynb  serve.ipynb  test_data.ipynb
reports/: default_metrics.txt  default_train_metrics.txt  defaultmetrics.txt  metrics.txt  train_metrics.txt
reports/default/: metrics.txt  train_metrics.txt
reports/sites/: stability_tests.html
reports/station_1/: metrics.txt
reports/station_10/: metrics.txt
reports/station_11/: metrics.txt
reports/station_12/: metrics.txt
reports/station_13/: metrics.txt
reports/station_14/: metrics.txt
reports/station_15/: metrics.txt
reports/station_16/: metrics.txt
reports/station_17/: metrics.txt
reports/station_18/: metrics.txt
reports/station_19/: metrics.txt
reports/station_2/: metrics.txt
reports/station_20/: metrics.txt
reports/station_21/: metrics.txt
reports/station_22/: metrics.txt
reports/station_23/: metrics.txt
reports/station_24/: metrics.txt
reports/station_25/: metrics.txt
reports/station_26/: metrics.txt
reports/station_27/: metrics.txt
reports/station_28/: metrics.txt
reports/station_29/: metrics.txt
src/: settings.py
tests/: mbajk_api_test.py  test_data.json  test_serve.py  weather_api_test.py
(+498 files in other folders)
