[tool.poetry]
name = "naloga1"
version = "0.1.0"
description = ""
authors = ["trdin <trdin.peter@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.2.1"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "~2.10"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
joblib = "^1.3.2"
flask = "^3.0.2"
requests = "^2.31.0"
scikit-learn = "^1.4.1.post1"
datetime = "^5.4"
openmeteo-requests = "^1.2.0"
requests-cache = "^1.2.0"
retry-requests = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
serve = "src.serve.serve:main"
mbike_data = "src.data.mbike_data:main"
weather_data = "src.data.weather_data:main"
train = "src.models.train:main"
train_all = "src.models.train_all_models:main"

