[tool.poetry]
name = "naloga1"
version = "0.1.0"
description = ""
authors = ["trdin <trdin.peter@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.2.1"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "~2.10"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
joblib = "^1.3.2"
flask = "^3.0.2"
requests = "^2.31.0"
scikit-learn = "^1.4.1.post1"
datetime = "^5.4"
openmeteo-requests = "^1.2.0"
requests-cache = "^1.2.0"
retry-requests = "^2.0.0"
flask-cors = "^4.0.0"
dvc = "^3.49.0"
dvc-s3 = "^3.1.0"
great-expectations = "^0.18.12"
evidently = "^0.4.19"
mlflow = "^2.12.1"
python-dotenv = "^1.0.1"
dagshub = "^0.3.25"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.4.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
serve = "src.serve.serve:main"

fetch_mbike = "src.data.fetch_mbike_data:main"
preprocess_mbike = "src.data.preprocess_mbike_data:main"
fetch_weather = "src.data.fetch_weather_data:main"
merge_data = "src.data.merge_processed_data:main"

split_data = "src.data.split_data:main"

test_data = "src.data_test.test_data:main"


train = "src.models.train:main"
train_all = "src.models.train_all_models:main"
evaluate_model = "src.models.evaluate_model:main"