[tool.poetry]
name = "naloga1"
version = "0.1.0"
description = ""
authors = ["trdin <trdin.peter@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
# Issue between poetry and tensorflow metadata since >=2.11
# This is a temporary workaround
# related to https://github.com/python-poetry/poetry/issues/8271
# Inspired from https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L148-L162
tensorflow = {version = "^2.13.0" }
tensorflow-intel = { version = "^2.13.0", platform = "win32" }
tensorflow-cpu = [
    { version = "^2.13.0", platform = "linux", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
    { version = "^2.13.0", platform = "darwin", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },]
tensorflow-cpu-aws = { version = "^2.13.0", platform = "linux", markers = "platform_machine=='arm64' or platform_machine=='aarch64'" }
# https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L107-L108
# https://github.com/python-poetry/poetry/issues/8271#issuecomment-1697740447
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
joblib = "^1.3.2"
flask = "^3.0.2"
requests = "^2.31.0"
scikit-learn = "^1.4.1.post1"
datetime = "^5.4"
openmeteo-requests = "^1.2.0"
requests-cache = "^1.2.0"
retry-requests = "^2.0.0"
flask-cors = "^4.0.0"
dvc = "^3.49.0"
dvc-s3 = "^3.1.0"
great-expectations = "^0.18.12"
evidently = "^0.4.19"
mlflow = "^2.12.1"
python-dotenv = "^1.0.1"
dagshub = "^0.3.25"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.4.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
serve = "src.serve.serve:main"

fetch_mbike = "src.data.fetch_mbike_data:main"
preprocess_mbike = "src.data.preprocess_mbike_data:main"
fetch_weather = "src.data.fetch_weather_data:main"
merge_data = "src.data.merge_processed_data:main"

split_data = "src.data.split_data:main"

test_data = "src.data_test.test_data:main"


train = "src.models.train:main"
train_all = "src.models.train_all_models:main"
evaluate_model = "src.models.evaluate_model:main"